[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/main/menus/local_game/panels/player_list/player_list.gd" type="Script" id=1]

[node name="PlayerList" type="PanelContainer"]
margin_right = 203.0
margin_bottom = 202.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 196.0
margin_bottom = 210.0
custom_constants/margin_right = 40
custom_constants/margin_top = 40
custom_constants/margin_left = 40
custom_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 40.0
margin_top = 40.0
margin_right = 149.0
margin_bottom = 163.0
custom_constants/separation = 20

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 109.0
margin_bottom = 14.0
text = "Local Multiplayer"

[node name="List" type="ItemList" parent="MarginContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 109.0
margin_bottom = 43.0
auto_height = true

[node name="AddPlayerButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 63.0
margin_right = 109.0
margin_bottom = 83.0
text = "Add Player"

[node name="RemovePlayerButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 103.0
margin_right = 109.0
margin_bottom = 123.0
text = "Remove Player"
[connection signal="item_selected" from="MarginContainer/VBoxContainer/List" to="." method="selected_player"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/AddPlayerButton" to="." method="add_player"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/RemovePlayerButton" to="." method="remove_player"]
